--- a/product_pages/index.html
+++ b/product_pages/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Product</title>
-  <link rel="icon" href="/public/favicon.ico" />
-  <script type="module" crossorigin src="/wdd330/assets/product-DlNMCOap.js"></script>
+  <link rel="icon" href="/public/favicon.ico" /> <!-- Relative path for local build -->
+  <script type="module" crossorigin src="/wdd330/assets/product-BVOPyVpi.js"></script>
   <link rel="modulepreload" crossorigin href="/wdd330/assets/utils-B1gkA_s2.js">
-  <link rel="modulepreload" crossorigin href="/wdd330/assets/ProductData-328078zX.js">
+  <link rel="modulepreload" crossorigin href="/wdd330/assets/ProductData-DRfcUAi5.js">
   <link rel="stylesheet" crossorigin href="/wdd330/assets/utils-9aadTxLk.css">
+  <script type="module">import.meta.url;import("_").catch(()=>1);(async function*(){})().next();window.__vite_is_modern_browser=true</script>
+  <script type="module">!function(){if(window.__vite_is_modern_browser)return;console.warn("vite: loading legacy chunks, syntax error above and the same error below should be ignored");var e=document.getElementById("vite-legacy-polyfill"),n=document.createElement("script");n.src=e.src,n.onload=function(){System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))},document.body.appendChild(n)}();</script>
 </head>
 <body>
   <header class="divider">
@@ -19,9 +21,7 @@
     <div class="cart">
       <a href="../cart/index.html">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-          <path
-            d="M18.9 32.6c1.1 2.4 2.5 3.3 5.4 3.3 1.6 0 3.6-0.3 5.9-0.6 3.2-0.5 6.9-1 11.2-1 2.1 0 4.3 0.1 6.4 0.3 2.1 0.1 4.2 0.3 6.1 0.3 3.2 0 5.2-0.4 5.9-1.2 2.7-2.7 2.8-8.8 2.9-14.6 0.1-6.7 0.2-14.5 4.6-18.7 -0.5 0-1 0-1.6 0 -14.2 0-37.5 0-41.1 0C15.6 6.2 14.9 23.6 18.9 32.6z"
-          />
+          <path d="M18.9 32.6c1.1 2.4 2.5 3.3 5.4 3.3 1.6 0 3.6-0.3 5.9-0.6 3.2-0.5 6.9-1 11.2-1 2.1 0 4.3 0.1 6.4 0.3 2.1 0.1 4.2 0.3 6.1 0.3 3.2 0 5.2-0.4 5.9-1.2 2.7-2.7 2.8-8.8 2.9-14.6 0.1-6.7 0.2-14.5 4.6-18.7 -0.5 0-1 0-1.6 0 -14.2 0-37.5 0-41.1 0C15.6 6.2 14.9 23.6 18.9 32.6z" />
         </svg>
       </a>
     </div>
@@ -30,15 +30,19 @@
     <section class="product-detail">
       <h3 id="product-brand"></h3>
       <h2 class="divider" id="product-name"></h2>
-      <img id="product-image" src="" alt="" />
+      <img id="product-image" src="" alt="Product Image" />
       <p class="product-card__price" id="product-price"></p>
       <p class="product__color" id="product-color"></p>
       <div class="product-detail__description" id="product-description"></div>
+      <p id="product-discount"></p> <!-- For discount -->
       <div class="product-detail__add">
         <button id="addToCart" data-id="">Add to Cart</button>
       </div>
     </section>
   </main>
   <footer>&copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway Worldwide Online</footer>
+  <script nomodule>!function(){var e=document,t=e.createElement("script");if(!("noModule"in t)&&"onbeforeload"in t){var n=!1;e.addEventListener("beforeload",(function(e){if(e.target===t)n=!0;else if(!e.target.hasAttribute("nomodule")||!n)return;e.preventDefault()}),!0),t.type="module",t.src=".",e.head.appendChild(t),t.remove()}}();</script>
+  <script nomodule crossorigin id="vite-legacy-polyfill" src="/wdd330/assets/polyfills-legacy-COK4hfD3.js"></script>
+  <script nomodule crossorigin id="vite-legacy-entry" data-src="/wdd330/assets/product-legacy-CxgpG_Jz.js">System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))</script>
 </body>
 </html>
