--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./checkout/index.html" />
+    <meta http-equiv="refresh" content="0; url=cart.html" />
   </head>
   <body></body>
 </html>
